Started addition of validations
