# api/api.yaml
@@ -43,6 +43,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/TicketLeaseResponse"
+        '400':
+          description: bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
 
   /lineages/{lineageId}/tickets/{ticketExtId}:
     get:
@@ -154,3 +161,17 @@ components:
           enum:
             - released
             - closed
+
+    Error:
+      type: object
+      required:
+        - code
+        - message
+        - requestId
+      properties:
+        code:
+          type: integer
+        message:
+          type: string
+        requestId:
+          type: string
